--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
         <title>Vite + Vue</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app" class="bg-white dark:bg-black"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
